k8s-template/backend/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: impermanent-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: impermanent-backend
  template:
    metadata:
      labels:
        app: impermanent-backend
    spec:
      containers:
      - name: impermanent-backend
        image: ghcr.io/mataai/impermanent_be:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
        - name: impermanent-storage
          mountPath: /media/
      volumes:
      - name: impermanent-storage
        persistentVolumeClaim:
          claimName: impermanent
