k8s-template/backend/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: impermanent-backend-service
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: impermanent-backend
  ports:
  - port: 80
    targetPort: 3000 #replace me (Port your app runs on)!
