k8s-template/backend/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: contour
  tls:
  - hosts:
    - <team>-backend.impermanent.sandbox.cedille.club #replace me!
    secretName: secret
  rules:
  - host: <team>-backend.impermanent.sandbox.cedille.club #replace me!
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: impermanent-backend-service
            port:
              number: 80
